<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>com.example</groupId>
  <artifactId>lab13</artifactId>
  <version>1.0-SNAPSHOT</version>
  <name>lab13</name>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <maven.compiler.source>17</maven.compiler.source>
    <maven.compiler.target>17</maven.compiler.target>
    <javafx.version>17.0.6</javafx.version>
    <javafx.maven.plugin.version>0.0.8</javafx.maven.plugin.version>
  </properties>

  <dependencies>
    <dependency>
      <groupId>org.openjdk.nashorn</groupId>
      <artifactId>nashorn-core</artifactId>
      <version>15.4</version>
    </dependency>
    <!-- https://mvnrepository.com/artifact/org.dynalang/dynalink -->
    <dependency>
      <groupId>org.dynalang</groupId>
      <artifactId>dynalink</artifactId>
      <version>0.7</version>
    </dependency>
    <dependency>
      <groupId>org.openjfx</groupId>
      <artifactId>javafx-controls</artifactId>
      <version>${javafx.version}</version>
    </dependency>
    <dependency>
      <groupId>org.openjfx</groupId>
      <artifactId>javafx-fxml</artifactId>
      <version>${javafx.version}</version>
    </dependency>
  </dependencies>

  <build>
        <plugins>
            <plugin>
              <groupId>org.apache.maven.plugins</groupId>
              <artifactId>maven-compiler-plugin</artifactId>
              <version>3.11.0</version>
              <configuration>
                <source>17</source>
                <target>17</target>
              </configuration>
            </plugin>
            <plugin>
              <groupId>org.openjfx</groupId>
              <artifactId>javafx-maven-plugin</artifactId>
              <version>0.0.8</version>
              <executions>
                <execution>
                  <!-- Default configuration for running with: mvn clean javafx:run -->
                  <id>default-cli</id>
                  <configuration>
                    <options>-Djavafx.allowjs=true --add-modules jdk.dynalink --add-reads jdk.dynalink=ALL-UNNAMED --add-reads java.base=ALL-UNNAMED</options>
                    <mainClass>com.example.lab13.Main</mainClass>
                  </configuration>
                </execution>
              </executions>
            </plugin>
          </plugins>
  </build>
</project>